[metadata]
name = vw_carnet
version = 0.0.1
author = Ryan Hayward
author_email = rhhayward@att.net
description = VW carnet access
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhhayward/py_vw_carnet
project_urls =
    Bug Tracker = https://github.com/rhhayward/py_vw_carnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
